# aidl-lsp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
editors/code/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json
editors/code/src/: extension.ts
editors/code/tmp/: [Content_Types].xml  extension.vsixmanifest
editors/code/tmp/extension/: aidl.tmLanguage.json  package.json
src/: dispatch.rs  error.rs  handlers.rs  indexing.rs  log.rs  main.rs  state.rs  utils.rs
